# ot-harjoitustyo

./: .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  työaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md
src/: build.py  config.py  database_connection.py  index.py  initialize_database.py
src/entities/: budget.py  user.py
src/repositories/: budget_repository.py  user_repository.py
src/services/: budget_service.py  user_service.py
src/tests/: test_budget.py
src/tests/repositories/: test_budget_repository.py  test_user_repository.py
src/tests/services/: test_budget_service.py  test_user_service.py
src/ui/: add_budget.py  add_entry.py  balance.py  budget_helper.py  budgets.py  delete.py  edit.py  list_budgets.py  login.py  register.py  search_by_category.py  ui.py  widgets.py
